# libEmbedded

./: CMakeLists.txt
include/gw/libEmbedded/: Buffer.h  Callback.h  EdgeDetector.h
include/libEmbedded/: Buffer.h  Callback.h  EdgeDetector.h  Expected.h  Helpers.h  Iterator.h  Optional.h  Pointer.h  Span.h  TemplateUtil.h  TypeTrait.h
include/libEmbedded/bits/: BitBuffer.h  Combining.h  Extracting.h  Flags.h  Helpers.h  Masking.h  Util.h
src/: EdgeDetector.cpp
src/bits/: BitBuffer.cpp  Helpers.cpp
tests/: CMakeLists.txt  Callback.cpp  CallbackHelper.h  CustomHelper.h  EdgeDetector.cpp  Expected.cpp  Helpers.cpp  Iterator.cpp  Optional.cpp  Pointer.cpp  Span.cpp  SpanIteratorHelpers.cpp  TemplateUtil.cpp  TypeTrait.cpp  tests.cpp
tests/Bits/: Helpers.cpp
tests/Bits/Helpers/: BitCombinerHelpers.cpp  BitFlagMaskCreator.cpp  BitMaskCreator.cpp  Combining.cpp  Extracting.cpp  Flags.cpp  Helpers.cpp  Masking.cpp  MoveWithOffset.cpp  SetBits.cpp  Util.cpp
tests/Buffer/: AssignmentConstructor.cpp  Comparison.cpp  Iterators.cpp  Operations.cpp  Retrieval.cpp
tests/Callback/: CallbackCommon.cpp  NoReturnNoArgs.cpp  NoReturnWithArgs.cpp  WithReturnNoArgs.cpp  WithReturnWithArgs.cpp
